# mini-project-01

./: .gitignore  README.md  all_output_gaussian.txt  all_output_mog.txt  all_output_vamp.txt  environment.yml  output_flow.txt  pyproject.toml  requirements.txt  train_apc.sh  train_hpc.sh
configs/: config.yaml
configs/models/: ddpm.yaml  flow.yaml  vae.yaml
configs/optimizer/: adam.yaml  adamW.yaml
configs/priors/: gaussian.yaml  mog.yaml  vamp.yaml
configs/training/: training_config.yaml  training_config_flow.yaml
samples/: elbo_vae_gaussian.txt  elbo_vae_mog.txt  elbo_vae_vamp.txt
src/mini_project_01/: data.py  evaluate.py  helpers.py  sample.py  train.py
src/mini_project_01/models/: ddpm.py  flow.py  priors.py  vae.py
